<resources>
    <string name="app_name">Cricket App</string>
    <string name="home">Home</string>
    <string name="series">Series</string>
    <string name="matches">Matches</string>
    <string name="match">Match</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browse_cricket">Browse Cricket</string>
    <string name="browse_series">Browse Series</string>
    <string name="browse_team">Browse Team</string>
    <string name="browse_player">Browse Player</string>
    <string name="latest_stories">Latest Stories</string>
    <string name="rankings">Rankings</string>
    <string name="country">Country</string>
    <string name="search_team">Search Team</string>
    <string name="ranking_odi_t20_test">Ranking ODI, T20, Test</string>
    <string name="team">Team</string>
    <string name="teams">Teams</string>
    <string name="men">Men</string>
    <string name="odi">ODI</string>
    <string name="test">Test</string>
    <string name="t20i">T20I</string>
    <string name="_1">1</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="_100">100</string>
    <string name="image">Image</string>
    <string name="position">#</string>
    <string name="points">Points</string>
    <string name="rating">Rating</string>
    <string name="player">Player</string>
    <string name="search_player">Search Player</string>
    <string name="full_name">Full Name</string>
    <string name="shakib_al_hasan">Shakib al hasan</string>
    <string name="gender">Gender</string>
    <string name="m">M</string>
    <string name="batting_style">Batting Style</string>
    <string name="right_hand_bat">right-hand-bat</string>
    <string name="bowling_style">Bowling Style</string>
    <string name="right_arm_offbreak">right-arm-offbreak</string>
    <string name="position_name">Position Name</string>
    <string name="bowler">Bowler</string>
    <string name="date_of_birth">1977-10-13</string>
    <string name="average">Average</string>
    <string name="balls_faced">Balls Faced</string>
    <string name="fifties">Fifties</string>
    <string name="four">Four</string>
    <string name="fow_balls">foW Balls</string>
    <string name="fow_score">foW Score</string>
    <string name="highest_inning_score">Highest Inning Score</string>
    <string name="hundreds">Hundreds</string>
    <string name="runs_scored">Runs Scored</string>
    <string name="six">six</string>
    <string name="not_outs">Not Outs</string>
    <string name="innings">Innings</string>
    <string name="strike_rate">Strike Rate</string>
    <string name="econ_rate">econ Rate</string>
    <string name="five_wickets">Five Wickets</string>
    <string name="four_wickets">Four Wickets</string>
    <string name="wide">Wide</string>
    <string name="wickets">Wickets</string>
    <string name="ten_wickets">Ten Wickets</string>
    <string name="runs">Runs</string>
    <string name="rate">Rate</string>
    <string name="overs">Overs</string>
    <string name="no_ball">No ball</string>
    <string name="medians">Medians</string>
    <string name="upcoming_finished_abandoned_match">Upcoming, Finished, Abandoned Match</string>
    <string name="bangladesh_premier_league_2023">Bangladesh Premier League 2023</string>
    <string name="t20_match">T20 Match</string>
    <string name="finished">Finished</string>
    <string name="bangladesh_won_by_36_runs">Bangladesh won by 36 runs</string>
    <string name="bgd">BGD</string>
    <string name="team_logo">Team Logo</string>
    <string name="round_date">%s - %s</string>
    <string name="run_wicket">%s - %s</string>
    <string name="match_over">%s Over</string>
    <string name="match_venue_name_city">%s, %s</string>
    <string name="fixtures">Fixtures</string>
    <string name="match_status_upcoming">Upcoming</string>
    <string name="match_status_abandoned">Abandoned</string>
    <string name="match_status_finished">Finished</string>
    <string name="all_rounder">All Rounder</string>
    <string name="local_team">Local Team</string>
    <string name="visitor_name">Visitor Name</string>
    <string name="toss_won">Toss Won</string>
    <string name="winner">Winner</string>
    <string name="man_of_match">Man of Match</string>
    <string name="man_of_series">Man of Series</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="umpire">Umpire</string>
    <string name="first_umpire">First Umpire</string>
    <string name="tv_umpire">TV Umpire</string>
    <string name="second_umpire">Second Umpire</string>
    <string name="referee">Referee</string>
    <string name="venues">Venues</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="capacity">Capacity</string>
    <string name="_9_30_am">9:30 AM</string>
    <string name="_12_jan_2023">12 Jan 2023</string>
    <string name="sher_e_bangla_national_cricket_stadium">Sher-E-Bangla National Cricket Stadium</string>
    <string name="mirpur_10">Mirpur-10</string>
    <string name="colon_text">: %s</string>
    <string name="leagues">Leagues</string>
    <string name="team_match">Team Match</string>
    <string name="s_r">S/R</string>
    <string name="_6s">6s</string>
    <string name="_4s">4s</string>
    <string name="b">B</string>
    <string name="r">R</string>
    <string name="batting">Batting</string>
    <string name="bowling">Bowling</string>
    <string name="eco">Eco</string>
    <string name="nb">NB</string>
    <string name="wd">WD</string>
    <string name="w">W</string>
    <string name="o">O</string>
    <string name="recent_match">Recent Match</string>
    <string name="personal_information">Personal Information</string>
    <string name="fixture_information">Fixture Information</string>
    <string name="live">Live</string>
</resources>