<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bowler_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/shakib_al_hasan" />

        <TextView
            android:id="@+id/bowler_over"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_100"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/bowler_medians"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/m"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/bowler_run"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/r"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/bowler_wickets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/w"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/bowler_wide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wd"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/bowler_noball"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nb"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/bowler_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eco"
            android:textAlignment="center" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/smaller_padding" />

</LinearLayout>