<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.fragment.fixtures.ScoreboardsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/small_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/local_team"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/layout_margin"
                android:layout_weight="1"
                tools:text="@string/bangladesh" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/visitor_team"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/layout_margin"
                android:layout_weight="1"
                tools:text="@string/bangladesh" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:orientation="horizontal"
                    android:padding="@dimen/small_padding">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/batting"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/r"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/b"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_4s"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_6s"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/s_r"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/batsman_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/batsman_scoreboards" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:orientation="horizontal"
                    android:padding="@dimen/small_padding">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/bowling"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/o"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/m"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/r"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/w"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wd"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nb"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/eco"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnPrimary" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bowler_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/bowler_scoreboards" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>