<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/ranking_item_padding">

        <TextView
            android:id="@+id/ranking_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <ImageView
            android:id="@+id/ranking_image_path"
            android:layout_width="@dimen/ranking_item_team_image"
            android:layout_height="@dimen/ranking_item_team_image"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/ranking_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/bangladesh"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/ranking_matches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_100"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/ranking_points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_100"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/ranking_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_100"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceSubtitle1" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetEnd="@dimen/small_padding"
        app:dividerInsetStart="@dimen/small_padding" />

</LinearLayout>